deploy/k8s/moon/moon-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moon-frontend
  namespace: application
  labels:
    app: moon-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moon-frontend
  template:
    metadata:
      labels:
        app: moon-frontend
    spec:
      containers:
      - name: moon-frontend
        image: docker.cloudimages.asia/aidemoonio/web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
