deploy/k8s/moon/moon-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moon-frontend
  namespace: application
  labels:
    app: moon-frontend
spec:
  type: ClusterIP
  selector:
    app: moon-frontend
  ports:
  - name: http
    port: 80
    targetPort: http
