deploy/k8s/moon/moon-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moon-frontend
  namespace: application
  labels:
    app: moon-frontend
spec:
  ingressClassName: nginx
  tls:
  - secretName: moon
    hosts:
    - moon.aide-cloud.cn
  rules:
  - host: moon.aide-cloud.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moon-frontend
            port:
              number: 80
